--- a/MatrixLab/MatrixLab.vcxproj
+++ b/MatrixLab/MatrixLab.vcxproj
@@ -80,6 +80,9 @@
     <ClInclude Include="include\matrix.h" />
     <ClInclude Include="include\matrix_impl.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
